chore: fix minor spacing issues with enterprise toggle text

--- a/src/page-components/collections/framework-field-guide/components/pricing-card.module.scss
+++ b/src/page-components/collections/framework-field-guide/components/pricing-card.module.scss
@@ -101,6 +101,15 @@
 .enterpriseToggleText {
 	margin: 0;
 	color: var(--slate-300);
+	padding: 0 0.5rem;
+}
+
+.enterpriseToggleText {
+	text-align: right;
+}
+
+.enterpriseToggleText + .enterpriseToggleText {
+	text-align: left;
 }
 
 .enterpriseToggle:not(:checked) + .enterpriseToggleText {
